// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-hjIEjD fGCOqt"
    role="document"
  >
    <div
      class="sc-Wunit kaMHNy sc-djMJHV hihmdV"
      tabindex="0"
    >
      <span
        class="sc-jhbick hNFseq"
      >
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cHqurc dnJec sc-eillgj gosFKJ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-JXQyv lceOth"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gHmoSK cBteqP"
    >
      : 
    </i>
    <span
      class="sc-djDiuc crCdON"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-hjIEjD fGCOqt"
    role="document"
  >
    <div
      class="sc-Wunit kaMHNy sc-djMJHV hihmdV"
      tabindex="0"
    >
      <span
        class="sc-jhbick hNFseq"
      >
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cHqurc dnJec sc-eillgj gosFKJ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-JXQyv lceOth"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gHmoSK cBteqP"
    >
      : 
    </i>
    <span
      class="sc-djDiuc crCdON"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-hjIEjD fGCOqt"
    role="document"
  >
    <div
      class="sc-Wunit kaMHNy sc-djMJHV hihmdV"
      tabindex="0"
    >
      <span
        class="sc-jhbick hNFseq"
      >
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cHqurc dnJec sc-eillgj gosFKJ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-JXQyv lceOth"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gHmoSK cBteqP"
    >
      : 
    </i>
    <span
      class="sc-djDiuc crCdON"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-cHqurc dnJec sc-cVdwKd hQJeCT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-JXQyv lceOth"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-hjIEjD fGCOqt"
    role="document"
  >
    <div
      class="sc-Wunit kaMHNy sc-djMJHV hihmdV"
      tabindex="0"
    >
      <span
        class="sc-jhbick hNFseq"
      >
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cHqurc dnJec sc-eillgj gosFKJ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-JXQyv lceOth"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gHmoSK cBteqP"
    >
      : 
    </i>
    <span
      class="sc-djDiuc crCdON"
    >
      hey
       
      <span
        class="sc-cHqurc dnJec sc-cVdwKd hQJeCT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-JXQyv lceOth"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-cHqurc dnJec sc-cVdwKd hQJeCT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-JXQyv lceOth"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-hjIEjD fGCOqt"
    role="document"
  >
    <div
      class="sc-Wunit kaMHNy sc-djMJHV hihmdV"
      tabindex="0"
    >
      <span
        class="sc-jhbick hNFseq"
      >
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cHqurc dnJec sc-eillgj gosFKJ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-JXQyv lceOth"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gHmoSK cBteqP"
    >
      : 
    </i>
    <span
      class="sc-djDiuc crCdON"
    >
      hey
       
      <span
        class="sc-cHqurc dnJec sc-cVdwKd hQJeCT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-JXQyv lceOth"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-hjIEjD fGCOqt"
    role="document"
  >
    <div
      class="sc-Wunit kaMHNy sc-djMJHV hihmdV"
      tabindex="0"
    >
      <span
        class="sc-jhbick hNFseq"
      >
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cHqurc dnJec sc-eillgj gosFKJ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-JXQyv lceOth"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gHmoSK cBteqP"
    >
      : 
    </i>
    <span
      class="sc-djDiuc crCdON"
    >
      <span
        class="sc-cHqurc dnJec sc-cVdwKd hQJeCT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-JXQyv lceOth"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-hjIEjD fGCOqt"
    role="document"
  >
    <div
      class="sc-Wunit kaMHNy sc-djMJHV hihmdV"
      tabindex="0"
    >
      <span
        class="sc-jhbick hNFseq"
      >
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cHqurc dnJec sc-eillgj gosFKJ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-JXQyv lceOth"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gHmoSK cBteqP"
    >
      : 
    </i>
    <span
      class="sc-djDiuc crCdON"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-cHqurc dnJec sc-cVdwKd hQJeCT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-JXQyv lceOth"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-hjIEjD bGBnGq"
    role="document"
  >
    <div
      class="sc-Wunit kaMHNy sc-djMJHV hihmdV"
      tabindex="0"
    >
      <span
        class="sc-jhbick hNFseq"
      >
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gHmoSK cBteqP"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cHqurc dnJec sc-eillgj gosFKJ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-JXQyv lceOth"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gHmoSK cBteqP"
    >
      : 
    </i>
    <span
      class="sc-djDiuc crCdON"
    >
      Hey
       
      <span
        class="sc-cHqurc dnJec sc-cVdwKd hQJeCT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-JXQyv lceOth"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
